# lsd

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  PROVENANCE.md  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new-example.md  source-update.md
.github/workflows/: ci.yml
docs/: architecture.md  cross-case-comparison.md  ingestion-modes.md  llm-provider.md  spec.md
examples/ci/: README.md  drift-check.yml
examples/pixelrag-repo/: CHANGELOG.md  README.md  SKILL.md  extraction-report.md  metadata.json  skill-opportunities.md  source-policy.md  source.md
examples/wikipedia-ai-writing/: CHANGELOG.md  README.md  SKILL.md  extraction-report.md  metadata.json  skill-opportunities.md  source-policy.md  source.md
schema/: metadata.schema.json
skills/lsd-builder/: SKILL.md
skills/lsd-builder/references/: interview-guide.md  output-schema.md  provider-config.md  rubric.md
src/lsd/: __init__.py  classifier.py  cli.py  compiler.py  conflict_detector.py  exceptions.py  fetcher.py  models.py  normaliser.py  opportunity_mapper.py  pipeline.py  router.py  utils.py  validation.py  writer.py
src/lsd/backends/: __init__.py  base.py  pixelrag.py  text.py
src/lsd/llm/: __init__.py  anthropic.py  base.py  openai_compat.py
src/lsd/retrieval/: __init__.py  base.py  naive.py
src/lsd/scripts/: __init__.py  check-drift.py  motivation-check.py
tests/: README.md  rubric.md
tests/cases/pixelrag-repo/: input.json
tests/cases/wikipedia-ai-writing/: input.json
tests/cases/wikipedia-ai-writing/expected/: CHANGELOG.md  README.md  SKILL.md  extraction-report.md  metadata.json  skill-opportunities.md  source-policy.md
tests/unit/: test_classifier.py  test_compiler.py  test_conflict_detector.py  test_drift.py  test_drift_script_parity.py  test_eval_init.py  test_fetcher.py  test_normaliser.py  test_pipeline_multi.py  test_retrieval.py  test_router.py  test_utils.py  test_validation.py  test_writer.py
