[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsd"
version = "0.1.0"
description = "Link-to-Skill Designer — turn any webpage into a reusable Claude skill package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "click>=8.1",
    "rich>=13",
    "pydantic>=2.7",
]

[project.optional-dependencies]
visual = ["pixelrag"]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff",
    "mypy",
]

[project.scripts]
lsd = "lsd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
