[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsd"
version = "0.5.0"
description = "Link-to-Skill Designer — turn any webpage into a reusable Claude skill package"
readme = "README.md"
requires-python = ">=3.11"
# Core stays light — no LLM SDK required. The openai-compat backend uses
# httpx (already here) and needs no extra install.
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "click>=8.1",
    "rich>=13",
    "pydantic>=2.7",
]

[project.optional-dependencies]
# LLM providers — install whichever you use (openai-compat needs no extra)
anthropic = ["anthropic>=0.100"]
openai    = ["openai>=1.30"]           # only needed if you want the OpenAI SDK directly

# Visual rendering backend
visual = ["pixelrag[playwright]>=0.3.0"]

# Convenience bundles
all-llm = ["lsd[anthropic,openai]"]
all     = ["lsd[anthropic,openai,visual]"]

dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff",
    "mypy",
    "anthropic>=0.100",               # needed for dev/test of the Anthropic backend
    "skills-ref>=0.1",                # agentskills spec validator
]

[project.scripts]
lsd = "lsd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
